# henchmen

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  henchmen_dev.db-shm  henchmen_dev.db-wal  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  GITHUB_PAGES.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  evals.yml  release.yml
containers/dispatch/: Dockerfile  entrypoint.sh  requirements.txt
containers/forge/: Dockerfile  requirements.txt
containers/mastermind/: Dockerfile  requirements.txt
containers/operative/: Dockerfile  requirements.txt
docs/: architecture.md  cost-model.md  deploy-gcp.md  incident-runbook.md  index.html  operations.md  roadmap.md  rollback-procedures.md  schemes.md  troubleshooting.md
docs/images/: metrics-sample.txt
docs/releases/: 2026-04-10-v0.1.1.md
docs/superpowers/reviews/: 2026-04-09-expert-panel-review.md
evals/: README.md  __init__.py  baseline.json  harness.py  storage.py
evals/fixtures/bugfix_import_error/: task.json
evals/fixtures/bugfix_import_error/expected/: diff_patterns.json
evals/fixtures/bugfix_import_error/repo/: date_helpers.py  pyproject.toml  test_date_helpers.py
evals/fixtures/bugfix_missing_return/: task.json
evals/fixtures/bugfix_missing_return/expected/: diff_patterns.json
evals/fixtures/bugfix_missing_return/repo/: math_utils.py  pyproject.toml  (+1 more)
evals/fixtures/bugfix_null_check/: task.json
evals/fixtures/bugfix_off_by_one/: task.json
evals/fixtures/bugfix_off_by_one/repo/: list_utils.py  pyproject.toml  test_list_utils.py
evals/fixtures/bugfix_type_error/: task.json
evals/fixtures/feature_add_endpoint/: task.json
evals/fixtures/feature_add_logging/: task.json
evals/fixtures/feature_add_logging/repo/: batch_processor.py  pyproject.toml
evals/fixtures/feature_add_validation/: task.json
evals/fixtures/feature_cli_flag/: task.json
evals/fixtures/refactor_extract_function/: task.json
evals/fixtures/refactor_rename_variable/: task.json
scripts/: bootstrap-gcp.sh
src/henchmen/: __init__.py  cli.py
src/henchmen/arsenal/: __init__.py  _workspace.py  registry.py  server.py
src/henchmen/cli/: __init__.py  chat.py  doctor.py
src/henchmen/config/: __init__.py  settings.py
src/henchmen/dispatch/: __init__.py  normalizer.py  pubsub_auth.py  server.py  slack_bot.py
src/henchmen/dossier/: __init__.py  builder.py  cache.py  chunker.py  convention_detector.py  embedder.py  file_scorer.py  reranker.py  rules.py  task_analyzer.py
src/henchmen/forge/: __init__.py  ci_orchestrator.py  ci_runner.py  error_extractor.py  merge_queue.py  pr_builder.py  server.py  silent_failure_detector.py
src/henchmen/mastermind/: __init__.py  agent.py  lair_manager.py  server.py  state_machine.py
src/henchmen/models/: __init__.py  _base.py  dossier.py  evaluation.py  llm.py  operative.py  scheme.py  task.py
src/henchmen/observability/: __init__.py  api.py  cost_accumulator.py  evaluator.py  experiments.py  structured_logging.py  tracing.py  tracker.py
src/henchmen/operative/: __init__.py  agent_builder.py  bootstrap.py  failure_classifier.py  guardrails.py  nudge_detector.py  prompt_templates.py  tokenizer.py
src/henchmen/providers/: __init__.py  anthropic.py  openai.py  registry.py
src/henchmen/schemes/: __init__.py  _shared_templates.py  base.py  bugfix_standard.py  feature_standard.py  goal_decomposition.py  registry.py
src/henchmen/utils/: __init__.py  git.py  retry.py  stack_detector.py
terraform/environments/dev/: README.md  backend.tf  dev.auto.tfvars  main.tf  outputs.tf  variables.tf
terraform/environments/root/: main.tf  outputs.tf  variables.tf
terraform/environments/staging/: README.md  backend.tf  main.tf  outputs.tf  staging.auto.tfvars  variables.tf
terraform/modules/artifact-registry/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/cloud-build/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/cloud-run-lairs/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/cloud-run-services/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/data-stores/: README.md  firestore.rules  main.tf  outputs.tf  variables.tf
terraform/modules/iam/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/networking/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/observability/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/project-bootstrap/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/pubsub/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/scheduler/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/vertex-ai/: README.md  main.tf  outputs.tf  variables.tf
terraform/shared/: labels.tf  variables.tf  versions.tf
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  helpers.py  test_arsenal_tools.py  test_dispatch_pipeline.py  test_end_to_end.py  test_forge_pipeline.py  test_mastermind_orchestration.py  test_reliability_guards.py  test_smoke.py
tests/unit/: test_arsenal.py  test_arsenal_context.py  test_aws_providers.py  test_chunker.py  test_ci_feedback.py  test_cli.py  test_cli_chat.py  test_cli_doctor.py  test_config.py  test_convention_detector.py  test_direct_llm_providers.py  test_dispatch.py  test_dossier.py  test_embedder.py  test_error_extractor.py  test_eval_storage.py  test_evals_harness.py  test_file_scorer.py  test_forge.py  test_gcp_providers.py  test_llm_models.py  test_local_providers.py  test_mastermind.py  test_nudge_detector.py  test_observability.py  test_operative.py  test_provider_interfaces.py  test_provider_registry.py  test_rate_limiter.py  test_reranker.py  test_retry.py  test_schemes.py  test_scoped_checks.py  test_silent_failure_detector.py  test_stack_detector.py
(+75 files in other folders)
