[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "henchmen-eval-bugfix-off-by-one"
version = "0.0.1"
description = "Fixture repo for the bugfix_off_by_one evaluation scenario."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["."]
